// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldRow /> should render correctly 1`] = `
<FormGroup
  className="mock-class"
  row={true}
  tag="div"
>
  <div
    id="mock"
  />
</FormGroup>
`;

exports[`<FieldRow /> should work without the className prop 1`] = `
<FormGroup
  className=""
  row={true}
  tag="div"
>
  <div
    id="mock"
  />
</FormGroup>
`;
